--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1509,6 +1509,100 @@ button:focus {
   color: #fff;
 }
 
+/*===========================
+        8.PROJECTS
+=============================*/
+
+#projects .item .meta {
+  padding: 4px 8px;
+  font-size: 10px;
+  font-weight: 600;
+  margin: 14px 0;
+  border: 1px solid #cd5353;
+  display: inline-block;
+  color: #cd5353;
+}
+
+#projects .item h5 {
+  opacity: .8;
+  font-size: 14px;
+  font-weight: 500;
+  margin-bottom: 10px;
+}
+
+#projects .item h4 {
+  margin: 0;
+  background: linear-gradient(to right, #fff0 -10%, #cd5353 100%);
+  padding-left: 10px;
+}
+
+#projects .item {
+  position: relative;
+  width: 100%;
+  display: inline-block;
+}
+
+#projects .item .item-icon {
+  margin-right: 10px;
+}
+
+#projects .skill-item h5 {
+  font-size: 15px;
+  margin-bottom: 5px;
+  display: inline-block;
+}
+
+#projects .skill-item span {
+  font-size: 15px;
+  margin-bottom: 5px;
+  display: inline-block;
+  float: right;
+  font-weight: 400;
+}
+
+#projects .progress-bar {
+  float: left;
+  width: 0%;
+  height: 100%;
+  font-size: 12px;
+  line-height: 20px;
+  color: transparent;
+  text-align: center;
+  background-color: #cd5353;
+  -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
+  box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
+  -webkit-transition: width 0.6s ease;
+  -o-transition: width 0.6s ease;
+  transition: width 0.6s ease;
+}
+
+@media (max-width: 575px) {
+  #projects .skill-item {
+    margin-bottom: 30px;
+    margin-left: 0px;
+  }
+}
+
+#projects .progress {
+  width: 100%;
+  overflow: hidden;
+  height: 2px;
+  margin-bottom: 20px;
+  background-color: #ffffff08;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
+  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
+}
+
+#projects .progress-bar,
+#projects .progress {
+  transition: all 4s;
+}
+
+#projects a {
+  color: #fff;
+}
+
 
 /*======================
       9.COUNTER
